# polymarket-arb

./: .env.example  .gitignore  README.md  arb.py  matcher.py  requirements.txt
clients/: __init__.py  kalshi.py  polymarket.py
cpp/: CMakeLists.txt  README.md
cpp/src/: arb.cpp  arb.h  display.cpp  display.h  kalshi.cpp  kalshi.h  main.cpp  matcher.cpp  matcher.h  polymarket.cpp  polymarket.h
